changed the tolist